updating config file to try to send emails

--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,15 @@
 [DIRECTORIES]
 SERVICE_GIT_DIR = r'C:\ARIS'
 
+# If you want airflow to send emails on retries, failure, and you want to use 
+# the airflow.utils.email.send_email_smtp function, you have to configure an 
+# smtp server here 
+smtp_host = smtp.gmail.com 
+smtp_starttls = True 
+smtp_ssl = False 
+# Example: smtp_user = airflow 
+smtp_user = gchickering
+smtp_password = ae7axN2Hacwn$
+# smtp_password = your gmail password 
+smtp_port = 25 
+smtp_mail_from = gchickering@air.org
