updating config file

--- a/config.ini
+++ b/config.ini
@@ -8,8 +8,8 @@ smtp_host = smtp.gmail.com
 smtp_starttls = True 
 smtp_ssl = False 
 # Example: smtp_user = airflow 
-smtp_user = gchickering
+smtp_user = gchickering@air.org
 smtp_password = ae7axN2Hacwn$
 # smtp_password = your gmail password 
-smtp_port = 25 
+smtp_port = 465 
 smtp_mail_from = gchickering@air.org
