--- a/config.ini
+++ b/config.ini
@@ -13,3 +13,4 @@ smtp_password = mditpcs27
 # smtp_password = your gmail password 
 smtp_port = 465 
 smtp_mail_from = grahamchickering@gmail.com
+email_conn_id = smtp_default
