--- a/config.ini
+++ b/config.ini
@@ -12,4 +12,4 @@ smtp_user = sas1chickeringg
 smtp_password = ae7axN2Hacwn$
 # smtp_password = your gmail password 
 smtp_port = 465 
-smtp_mail_from = grahamchickering@gmail.com
+smtp_mail_from = gchickering@air.org
