--- a/config.ini
+++ b/config.ini
@@ -4,12 +4,12 @@ SERVICE_GIT_DIR = r'C:\ARIS'
 # If you want airflow to send emails on retries, failure, and you want to use 
 # the airflow.utils.email.send_email_smtp function, you have to configure an 
 # smtp server here 
-smtp_host = smtp.gmail.com 
+smtp_host = smtp-mail.outlook.com 
 smtp_starttls = True 
 smtp_ssl = False 
 # Example: smtp_user = airflow 
-smtp_user = sas1chickeringg
+smtp_user = gchickering@air.org
 smtp_password = ae7axN2Hacwn$
 # smtp_password = your gmail password 
-smtp_port = 465 
+smtp_port = 587 
 smtp_mail_from = gchickering@air.org
