--- a/config.ini
+++ b/config.ini
@@ -4,12 +4,18 @@ SERVICE_GIT_DIR = r'C:\ARIS'
 # If you want airflow to send emails on retries, failure, and you want to use 
 # the airflow.utils.email.send_email_smtp function, you have to configure an 
 # smtp server here 
-smtp_host = smtp-mail.outlook.com 
-smtp_starttls = True 
-smtp_ssl = False 
+#smtp_host = smtp-mail.outlook.com 
+#smtp_starttls = False 
+#smtp_ssl = False 
 # Example: smtp_user = airflow 
-smtp_user = gchickering@air.org
-smtp_password = ae7axN2Hacwn$
+#smtp_user = gchickering@air.org
+s#mtp_password = ae7axN2Hacwn$
 # smtp_password = your gmail password 
-smtp_port = 587 
+#smtp_port = 587 
+#smtp_mail_from = gchickering@air.org
+
+smtp_host = localhost
+smtp_starttls = False
+smtp_ssl = False
+smtp_port = 25
 smtp_mail_from = gchickering@air.org
