--- a/config.ini
+++ b/config.ini
@@ -14,8 +14,9 @@ s#mtp_password = ae7axN2Hacwn$
 #smtp_port = 587 
 #smtp_mail_from = gchickering@air.org
 
-smtp_host = localhost
-smtp_starttls = False
-smtp_ssl = False
-smtp_port = 25
-smtp_mail_from = gchickering@air.org
+AIRFLOW__SMTP__SMTP_HOST=smtp.gmail.com
+AIRFLOW__SMTP__SMTP_PORT=587
+AIRFLOW__SMTP__SMTP_USER=gchickering@air.org
+AIRFLOW__SMTP__SMTP_PASSWORD=ae7axN2Hacwn
+AIRFLOW__SMTP__SMTP_MAIL_FROM=gchickering@air.org
+
