--- a/config.ini
+++ b/config.ini
@@ -17,7 +17,7 @@ s#mtp_password = ae7axN2Hacwn$
 AIRFLOW__SMTP__SMTP_HOST=smtp-mail.outlook.com
 AIRFLOW__SMTP__SMTP_PORT=587
 AIRFLOW__SMTP__SMTP_STARTTLS = True
-#AIRFLOW__SMTP__SMTP_USER=gchickering@air.org
-#AIRFLOW__SMTP__SMTP_PASSWORD=ae7axN2Hacwn
+AIRFLOW__SMTP__SMTP_USER= airflow
+AIRFLOW__SMTP__SMTP_PASSWORD=airflow
 AIRFLOW__SMTP__SMTP_MAIL_FROM=gchickering@air.org
 
