--- a/config.ini
+++ b/config.ini
@@ -14,10 +14,13 @@ s#mtp_password = ae7axN2Hacwn$
 #smtp_port = 587 
 #smtp_mail_from = gchickering@air.org
 
-AIRFLOW__SMTP__SMTP_HOST=smtp-mail.outlook.com
-AIRFLOW__SMTP__SMTP_PORT=587
-AIRFLOW__SMTP__SMTP_STARTTLS = True
-AIRFLOW__SMTP__SMTP_USER= gchickering
-AIRFLOW__SMTP__SMTP_PASSWORD= ae7axN2Hacwn$
-AIRFLOW__SMTP__SMTP_MAIL_FROM=gchickering@air.org
+; AIRFLOW__SMTP__SMTP_HOST=smtp-mail.outlook.com
+; AIRFLOW__SMTP__SMTP_PORT=587
+; AIRFLOW__SMTP__SMTP_STARTTLS = True
+; AIRFLOW__SMTP__SMTP_USER= gchickering
+; AIRFLOW__SMTP__SMTP_PASSWORD= ae7axN2Hacwn$
+; AIRFLOW__SMTP__SMTP_MAIL_FROM=gchickering@air.org
+
+email_conn_id = gchickering_send_email
+from_email = "gchickering@air.org"
 
