--- a/config.ini
+++ b/config.ini
@@ -14,11 +14,11 @@ s#mtp_password = ae7axN2Hacwn$
 #smtp_port = 587 
 #smtp_mail_from = gchickering@air.org
 
-AIRFLOW__SMTP__SMTP_HOST=smtp-mail.outlook.com
+AIRFLOW__SMTP__SMTP_HOST=smtp.office365.com
 AIRFLOW__SMTP__SMTP_PORT=587
 AIRFLOW__SMTP__SMTP_STARTTLS = True
-AIRFLOW__SMTP__SMTP_SSL=False
-AIRFLOW__SMTP__smtp_user= gchickering@air.org
+AIRFLOW__SMTP__SMTP_SSL= True
+AIRFLOW__SMTP__SMPT_USER= gchickering@air.org
 AIRFLOW__SMTP__SMTP_PASSWORD= ae7axN2Hacwn$
 AIRFLOW__SMTP__SMTP_MAIL_FROM=gchickering@air.org
 
