--- a/config.ini
+++ b/config.ini
@@ -1,20 +1,7 @@
 [DIRECTORIES]
 SERVICE_GIT_DIR = r'C:\ARIS'
 
-# If you want airflow to send emails on retries, failure, and you want to use 
-# the airflow.utils.email.send_email_smtp function, you have to configure an 
-# smtp server here 
-#smtp_host = smtp-mail.outlook.com 
-#smtp_starttls = False 
-#smtp_ssl = False 
-# Example: smtp_user = airflow 
-#smtp_user = gchickering@air.org
-s#mtp_password = ae7axN2Hacwn$
-# smtp_password = your gmail password 
-#smtp_port = 587 
-#smtp_mail_from = gchickering@air.org
-
-AIRFLOW__SMTP__SMTP_HOST=smtp.office365.com
+AIRFLOW__SMTP__SMTP_HOST=
 AIRFLOW__SMTP__SMTP_PORT=587
 AIRFLOW__SMTP__SMTP_STARTTLS = True
 AIRFLOW__SMTP__SMTP_SSL= True
